--- a/index.html
+++ b/index.html
@@ -799,8 +799,8 @@
 	<script src="assets/js/ScrollTrigger.min.js"></script>
 	<script src="assets/js/Observer.min.js"></script>
 	<script src="assets/js/gsap.effects.js"></script>
-	<script src="assets/commonjs/htmlChanger.js"></script>
-	<script src="assets/commonjs/enablebutton.js"></script>
+	<script src="assets/htmlChanger.js"></script>
+	<script src="assets/enablebutton.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
 	<script>
@@ -918,6 +918,7 @@
 		});
 	</script>
 	<script src="assets/js/middle-section.js"></script>
+
 
 
 
