--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html>
-
-<head>
+<html><head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Extracted Page">
 	<title>Home</title>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;600&display=swap"
-		rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;family=Open+Sans:wght@400;600&amp;display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
@@ -22,8 +19,7 @@
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-	<link rel="stylesheet"
-		href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
 	<style>
 		:root {
 			--site-font: "Quicksand";
@@ -52,8 +48,8 @@
 						<div class="col-md-6 col-sm-12 about-34-text">
 							<h2 class="about-34-title">Who we are</h2>
 							<p class="about-34-subtitle">
-								MARRIOTZ ELECTROMECH & ENGINEERING PROJECTS is engaged in
-								design, Consultancy, supply, installation, testing & commissioning of wide
+								MARRIOTZ ELECTROMECH &amp; ENGINEERING PROJECTS is engaged in
+								design, Consultancy, supply, installation, testing &amp; commissioning of wide
 								range of electrical systems. The Firm has in house capability for all
 								operations. Starting from modest beginning, the firm has established itself as a
 								leading name in the industries.
@@ -61,8 +57,8 @@
 
 							<p class="about-34-subtitle">
 								We are pleased to introduce ourselves as leading Turnkey Electrical
-								Contractors. We have complete set up for design, supply, execution, testing &
-								commissioning of electrical equipment & systems. We have hard working &
+								Contractors. We have complete set up for design, supply, execution, testing &amp;
+								commissioning of electrical equipment &amp; systems. We have hard working &amp;
 								experienced team to meet client’s complete satisfaction
 							</p>
 
@@ -73,18 +69,15 @@
 
 						<!-- Right Column -->
 						<div class="col-md-6 col-sm-12 about-34-img-wrapper">
-							<img src="assets/clients/meep/meep/images/about-34-1.png" alt="Abstract"
-								class="about-34-abstract-img">
+							<img src="assets/clients/meep/meep/images/about-34-1.png" alt="Abstract" class="about-34-abstract-img">
 
-							<img src="assets/clients/meep/meep/images/about-34-2.png" alt="bulb"
-								class="about-34-main-img">
+							<img src="assets/clients/meep/meep/images/about-34-2.png" alt="bulb" class="about-34-main-img">
 						</div>
 
 					</div>
 				</div>
 			</section>
-			<section class="section-wrapper home-60 fade-in"
-				style="background: url('assets/clients/meep/meep/images/home-60-bg.jpg') no-repeat center center/cover;">
+			<section class="section-wrapper home-60 fade-in" style="background: url('assets/clients/meep/meep/images/home-60-bg.jpg') no-repeat center center/cover;">
 				<div class="container">
 					<h2 class="home-60-title">Benefits of Solar Panels</h2>
 					<div class="row">
@@ -109,7 +102,7 @@
 						<div class="col-sm-6 col-md-3">
 							<div class="home-60-card">
 								<i class="bi bi-tools"></i>
-								<p>Durable, low-maintenance & reliable engineering</p>
+								<p>Durable, low-maintenance &amp; reliable engineering</p>
 							</div>
 						</div>
 					</div>
@@ -121,7 +114,7 @@
 						<!-- Left Content -->
 						<div class="col-sm-6">
 							<h5 class="home-48-subtitle">— OUR EXPERTISE</h5>
-							<h2 class="home-48-title">Advanced Electrical & Substation Solutions</h2>
+							<h2 class="home-48-title">Advanced Electrical &amp; Substation Solutions</h2>
 							<p class="home-48-description">
 								At Electromech Engineering, we specialize in delivering reliable solutions for EHV
 								substations, high-voltage lines, and power distribution systems. Our services ensure
@@ -129,7 +122,7 @@
 							</p>
 							<p class="home-48-description">
 								From design and installation to maintenance, we provide comprehensive electrical
-								solutions, including PLC & SCADA systems, control panels, and turnkey electrification
+								solutions, including PLC &amp; SCADA systems, control panels, and turnkey electrification
 								projects, ensuring uninterrupted power and system reliability.
 							</p>
 						</div>
@@ -149,7 +142,7 @@
 								<div class="col-xs-6 home-48-box-wrapper">
 									<div class="home-48-box home-48-white">
 										<i class="bi bi-diagram-3"></i>
-										<h4>HT & LT Panels</h4>
+										<h4>HT &amp; LT Panels</h4>
 										<p>VCB, MCC, and PCC panels for seamless power control and distribution.</p>
 									</div>
 								</div>
@@ -157,7 +150,7 @@
 								<div class="col-xs-6 home-48-box-wrapper">
 									<div class="home-48-box home-48-white">
 										<i class="bi bi-gear-wide-connected"></i>
-										<h4>PLC & SCADA Systems</h4>
+										<h4>PLC &amp; SCADA Systems</h4>
 										<p>Automated control and monitoring systems for efficient operations.</p>
 									</div>
 								</div>
@@ -166,7 +159,7 @@
 									<div class="home-48-box home-48-white">
 										<i class="bi bi-shield-check"></i>
 										<h4>Turnkey Projects</h4>
-										<p>Complete HT & LT electrification solutions, from planning to commissioning.
+										<p>Complete HT &amp; LT electrification solutions, from planning to commissioning.
 										</p>
 									</div>
 								</div>
@@ -393,7 +386,7 @@
 			</section>
 			<section class="section-wrapper home-66">
 				<div class="container text-left home-66-header">
-					<p class="home-66-services">> SERVICES</p>
+					<p class="home-66-services">&gt; SERVICES</p>
 					<h2 class="home-66-main-title">What we offer?</h2>
 				</div>
 
@@ -416,8 +409,7 @@
 								</ul>
 							</div>
 							<div class="col-sm-5 text-center">
-								<img src="assets/clients/meep/meep/images/services-5-5.jpg"
-									class="img-responsive img-thumbnail" alt="Power Control Center">
+								<img src="assets/clients/meep/meep/images/services-5-5.jpg" class="img-responsive img-thumbnail" alt="Power Control Center">
 							</div>
 						</div>
 					</div>
@@ -442,8 +434,7 @@
 								</ul>
 							</div>
 							<div class="col-sm-5 text-center">
-								<img src="assets/clients/meep/meep/images/services-5-6.jpg"
-									class="img-responsive img-thumbnail" alt="Motor Control Center">
+								<img src="assets/clients/meep/meep/images/services-5-6.jpg" class="img-responsive img-thumbnail" alt="Motor Control Center">
 							</div>
 						</div>
 					</div>
@@ -468,8 +459,7 @@
 								</ul>
 							</div>
 							<div class="col-sm-5 text-center">
-								<img src="assets/clients/meep/meep/images/services-5-15.jpg"
-									class="img-responsive img-thumbnail" alt="Turnkey Electrification">
+								<img src="assets/clients/meep/meep/images/services-5-15.jpg" class="img-responsive img-thumbnail" alt="Turnkey Electrification">
 							</div>
 						</div>
 					</div>
@@ -484,8 +474,7 @@
 					<div class="owl-carousel ourteam-carousel1">
 						<!-- Member 1 -->
 						<div class="ourteam-4-box ourteam-4-box-grey">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Md. Mustafa"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Md. Mustafa" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Md. Mustafa</h4>
 							<p class="ourteam-4-role">
 								Director<br>
@@ -495,8 +484,7 @@
 
 						<!-- Member 2 -->
 						<div class="ourteam-4-box ourteam-4-box-green">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mrs. Arfa Husain"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mrs. Arfa Husain" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mrs. Arfa Husain</h4>
 							<p class="ourteam-4-role">
 								Director<br>
@@ -506,8 +494,7 @@
 
 						<!-- Member 3 -->
 						<div class="ourteam-4-box ourteam-4-box-grey">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Md. Shahid Jamal"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Md. Shahid Jamal" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Md. Shahid Jamal</h4>
 							<p class="ourteam-4-role">
 								Project Engineer<br>
@@ -517,8 +504,7 @@
 
 						<!-- Member 4 -->
 						<div class="ourteam-4-box ourteam-4-box-green">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Nurul Husain"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Nurul Husain" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Nurul Husain</h4>
 							<p class="ourteam-4-role">
 								Project Engineer<br>
@@ -528,8 +514,7 @@
 
 						<!-- Member 5 -->
 						<div class="ourteam-4-box ourteam-4-box-grey">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Vishal Tukaram Dhawale"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Vishal Tukaram Dhawale" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Vishal Tukaram Dhawale</h4>
 							<p class="ourteam-4-role">
 								Site Engineer<br>
@@ -539,8 +524,7 @@
 
 						<!-- Member 6 -->
 						<div class="ourteam-4-box ourteam-4-box-green">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Surendar Maravi"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Surendar Maravi" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Surendar Maravi</h4>
 							<p class="ourteam-4-role">
 								Site Engineer<br>
@@ -550,8 +534,7 @@
 
 						<!-- Member 7 -->
 						<div class="ourteam-4-box ourteam-4-box-grey">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Rakesh Maravi"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Rakesh Maravi" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Rakesh Maravi</h4>
 							<p class="ourteam-4-role">
 								Site Engineer<br>
@@ -561,8 +544,7 @@
 
 						<!-- Member 8 -->
 						<div class="ourteam-4-box ourteam-4-box-green">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Mahesh Warkade"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Mahesh Warkade" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Mahesh Warkade</h4>
 							<p class="ourteam-4-role">
 								Supervisor<br>
@@ -572,8 +554,7 @@
 
 						<!-- Member 9 -->
 						<div class="ourteam-4-box ourteam-4-box-grey">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Rupesh Warkade"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Rupesh Warkade" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Rupesh Warkade</h4>
 							<p class="ourteam-4-role">
 								Fitter cum Electricians<br>
@@ -583,8 +564,7 @@
 
 						<!-- Member 10 -->
 						<div class="ourteam-4-box ourteam-4-box-green">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Vishwanath Dhurve"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Vishwanath Dhurve" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Vishwanath Dhurve</h4>
 							<p class="ourteam-4-role">
 								Fitter<br>
@@ -594,8 +574,7 @@
 
 						<!-- Member 11 -->
 						<div class="ourteam-4-box ourteam-4-box-grey">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Mangal Warkade"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Mangal Warkade" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Mangal Warkade</h4>
 							<p class="ourteam-4-role">
 								Fitter and Electricians<br>
@@ -605,8 +584,7 @@
 
 						<!-- Member 12 -->
 						<div class="ourteam-4-box ourteam-4-box-green">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Akbar Ali"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Akbar Ali" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Akbar Ali</h4>
 							<p class="ourteam-4-role">
 								Fitter and Electricians<br>
@@ -616,8 +594,7 @@
 
 						<!-- Member 13 -->
 						<div class="ourteam-4-box ourteam-4-box-grey">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Jalaluddin"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Jalaluddin" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Jalaluddin</h4>
 							<p class="ourteam-4-role">
 								Fitter and Electricians<br>
@@ -627,8 +604,7 @@
 
 						<!-- Member 14 -->
 						<div class="ourteam-4-box ourteam-4-box-green">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Md Javed Ahmed"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Md Javed Ahmed" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Md Javed Ahmed</h4>
 							<p class="ourteam-4-role">
 								Electricians<br>
@@ -638,8 +614,7 @@
 
 						<!-- Member 15 -->
 						<div class="ourteam-4-box ourteam-4-box-grey">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Md Anwar Ansari"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Md Anwar Ansari" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Md Anwar Ansari</h4>
 							<p class="ourteam-4-role">
 								Electricians<br>
@@ -649,8 +624,7 @@
 
 						<!-- Member 16 -->
 						<div class="ourteam-4-box ourteam-4-box-green">
-							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Aashif Ansari"
-								class="ourteam-4-img">
+							<img src="assets/clients/meep/meep/images/profile-img.png" alt="Mr. Aashif Ansari" class="ourteam-4-img">
 							<h4 class="ourteam-4-name">Mr. Aashif Ansari</h4>
 							<p class="ourteam-4-role">
 								Team Member<br>
@@ -669,7 +643,7 @@
 							<div class="sub-title">
 								<i class="bi bi-sun"></i> How We Work
 							</div>
-							<h2 class="main-title">Powering Homes & Businesses with Smarter Energy</h2>
+							<h2 class="main-title">Powering Homes &amp; Businesses with Smarter Energy</h2>
 							<p class="desc">
 								At Electromech Engineering, we deliver reliable solar panel solutions and advanced
 								electrical
@@ -680,7 +654,7 @@
 									<i class="bi bi-check-circle"></i> Leading Experts in Solar Installations
 								</div>
 								<div class="col-xs-6 feature-item">
-									<i class="bi bi-check-circle"></i> Energy Solutions for Homes & Industries
+									<i class="bi bi-check-circle"></i> Energy Solutions for Homes &amp; Industries
 								</div>
 								<div class="col-xs-6 feature-item">
 									<i class="bi bi-check-circle"></i> Skilled Team with Trusted Expertise
@@ -705,7 +679,7 @@
 							<div class="image-wrapper">
 								<img src="assets/clients/meep/meep/images/service-8-bg.jpg" alt="Solar Panel Services">
 								<div class="consult-box">
-									<h5>Need Expert Solar & Electrical Consultation?</h5>
+									<h5>Need Expert Solar &amp; Electrical Consultation?</h5>
 									<a href="#">Get Started <i class="bi bi-arrow-right"></i></a>
 								</div>
 							</div>
@@ -735,8 +709,7 @@
 								</p>
 								<div class="testimonial-10 author-info">
 									<div class="testimonial-10 author-img">
-										<img src="assets/clients/meep/meep/images/testimonial-10-1.jpg"
-											alt="Sophia Bennett" class="updateImg">
+										<img src="assets/clients/meep/meep/images/testimonial-10-1.jpg" alt="Sophia Bennett" class="updateImg">
 									</div>
 									<div class="testimonial-10 author-name">SOPHIA BENNETT</div>
 									<div class="testimonial-10 author-location">PUNE, INDIA</div>
@@ -755,8 +728,7 @@
 								</p>
 								<div class="testimonial-10 author-info">
 									<div class="testimonial-10 author-img">
-										<img src="assets/clients/meep/meep/images/testimonial-10-2.jpg"
-											alt="David Clarke" class="updateImg">
+										<img src="assets/clients/meep/meep/images/testimonial-10-2.jpg" alt="David Clarke" class="updateImg">
 									</div>
 									<div class="testimonial-10 author-name">DAVID CLARKE</div>
 									<div class="testimonial-10 author-location">MUMBAI, INDIA</div>
@@ -774,8 +746,7 @@
 								</p>
 								<div class="testimonial-10 author-info">
 									<div class="testimonial-10 author-img">
-										<img src="assets/clients/meep/meep/images/testimonial-10-2.jpg"
-											alt="Emily Harper" class="updateImg">
+										<img src="assets/clients/meep/meep/images/testimonial-10-2.jpg" alt="Emily Harper" class="updateImg">
 									</div>
 									<div class="testimonial-10 author-name">EMILY HARPER</div>
 									<div class="testimonial-10 author-location">NASHIK, INDIA</div>
@@ -922,4 +893,5 @@
 
 
 
-</body>
+
+</body></html>
