Update index.html via Django editor

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 						<!-- Left Column -->
 						<div class="col-md-6 col-sm-12 about-34-text">
-							<h2 class="about-34-title">Who we are</h2>
+							<h2 class="about-34-title">we are HERE TO DELIVER EDITABLE PROJECT</h2>
 							<p class="about-34-subtitle">
 								MARRIOTZ ELECTROMECH &amp; ENGINEERING PROJECTS is engaged in
 								design, Consultancy, supply, installation, testing &amp; commissioning of wide
@@ -445,7 +445,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-7">
-								<h2 class="home-66-title">Turnkey Electrification Project</h2>
+								<h2 class="home-66-title">TEST pROJECT EDITING</h2>
 								<p class="home-66-desc">
 									We undertake complete electrification projects from design to
 									commissioning, delivering end-to-end solutions with reliability and
