Update index.html via Django editor

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-7">
-								<h2 class="home-66-title">Power Control Center (PCC)</h2>
+								<h2 class="home-66-title">fdsafPower Control Center (PCC)</h2>
 								<p class="home-66-desc">
 									Our PCC panels are designed to efficiently distribute electrical
 									power and ensure safe, reliable, and continuous operation of your
@@ -693,7 +693,7 @@
 				<div class="container">
 					<div class="text-left">
 						<p class="testimonial-10 section-subtitle">CLIENT EXPERIENCES</p>
-						<h2 class="testimonial-10 section-title">TESTIMONIALS</h2>
+						<h2 class="testimonial-10 section-title">TESTIMONIALSsssssssssssssssssssssssssssssssssss</h2>
 						<div class="testimonial-10 title-underline"></div>
 					</div>
 
